# syno_com

./: .gitignore  CMakeLists.txt  library.c  library.h  syno_http_list.http  syno_lib.c  syno_lib.h
src/: syno_lib.c  syno_lib.h
test/: CMakeLists.txt  test_main.c
